--- a/src/main/resources/templates/listar-projetos-cliente.html
+++ b/src/main/resources/templates/listar-projetos-cliente.html
@@ -173,7 +173,7 @@
 
 <div id="content" class="content">
     <div class="table-card">
-        <h2>Seus Projetos</h2>
+        <h2>Os Seus Projetos</h2>
         <table>
             <thead>
             <tr>
